# cpp-audio

./: CMakeLists.txt  README.md  conanfile.py
docs/: CMakeLists.txt
include/tnt/audio/: file.hpp  file_base.hpp  io.hpp  multisignal.hpp  read.hpp  reader.hpp  signal.hpp  wav_file.hpp  wave_file.hpp
include/tnt/audio/impl/: wav_file.hpp
include/tnt/audio/reader/: wav_reader.hpp
src/: CMakeLists.txt  file.cpp  signal.cpp  wav_file.cpp  wav_file.hpp
test/: CMakeLists.txt  approx.cpp  config.cpp  config.hpp  file.cpp  file_base.cpp  io.cpp  multisignal.cpp  read.cpp  reader.cpp  signal.cpp  wav_file_test.cpp  wave_file.cpp
test/data/: sinewave_64bit_100Hz_1000Hz-sample-rate_10-size_1-channels.wav.reapeaks
test/reader/: wav_reader.cpp
